    deletion.  can_remove_autoinstalled() checks for this anyway, but the
    implementation could change in the future, and it shouldn't hurt to double
    check.

  * Convert some instances of boost::unordered_{set,map,multimap} to std::

  * Convert some instances of boost::hash to std::

  * Remove two uses of boost::lexical_cast, use std::to_string() instead

- Documentation:

  * manpage:

    * Remove wrong assertion that safe-upgrade does not accept --full-resolver
      (Closes: #560991)

    * Document missing &BD specifier when installing packages (Closes: #696568)

  * Guide/User's Manual:

    * Update renamed config option ::CmdLine::Show-Summary (Closes: #776789)

      The config option used in the code is ::CmdLine::Show-Summary, but in one
      place in the documentation it was named ::CmdLine::Why-Display-Mode
      (probably from an incomplete rename).

    * Correct some wrong examples of search patterns (Closes: #519456)


[2015-10-07]
Version 0.7.3

- Bug fixes:

  * [cmdline] Correctly calculate the indentation for multi-byte encoded strings
    in command line "show" (Closes: #360202)

  * [curses] Show intended action when downgrading (Closes: #516517)

    In package view/info screen, it was not handling this action and not showing
    anything in this case.

  * Update internal state for upgrades/downgrades with target version after the
    action is performed (Closes: #787658, #714429)

    Thanks to David Kalnischkies and Julian Andres Klode from APT team for their
    help, clues and patience.  It took some serious effort to get to this fix,
    which in the end is quite modest in terms of code changes.

    Internal state was neither reset nor written to disk until other packages'
    states changed, so aptitude marked the same action on the packages as
    pending to be performed again and again (but the action had already been
    taken, so there was no observable effect in terms of installations).
