@@ -81,6 +81,8 @@ Version 0.7.4 UNRELEASED
 
   * Remove two uses of boost::lexical_cast, use std::to_string() instead
 
+  * Create utility function remove_non_recursive()
+
 - Documentation:
 
   * manpage:
